# changelogz

./: Cargo.toml  README.md
docs/: shaping.md
src/: main.rs  models.rs  output.rs  store.rs
src/adapters/: anthropic.rs  cohere.rs  github.rs  google.rs  mistral.rs  mod.rs  openai.rs
src/tui/: app.rs  markdown.rs  mod.rs  ui.rs
