[package]
name = "changeloz"
version = "0.1.0"
edition = "2021"
description = "A lazygit-style TUI + CLI for tracking LLM API changelog updates"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# Parsing
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.22"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
dirs = "6"
